force-app/main/default/objects/Visit_Log__c/Visit_Log__c.object-meta.xml
<CustomObject>
    <description>Records a sales executive&apos;s visit to a referring physician or clinic.</description>
    <label>Visit Log</label>
    <nameField>
        <displayFormat>VL-{0000}</displayFormat>
        <label>Visit Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>