force-app/main/default/objects/Visit_Log__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinic</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Visit Logs</relationshipLabel>
    <relationshipName>Visit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>