force-app/main/default/objects/Visit_Log__c/fields/Follow_Up_Actions__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Actions__c</fullName>
    <description>Raw extracted follow-up text from the visit.</description>
    <label>Follow Up Actions</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>