force-app/main/default/objects/Visit_Log__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Physician</label>
    <referenceTo>HealthcareProvider</referenceTo>
    <relationshipLabel>Visit Logs</relationshipLabel>
    <relationshipName>Visit_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>