force-app/main/default/objects/Visit_Log__c/fields/Raw_Notes__c.field-meta.xml
<CustomField>
    <fullName>Raw_Notes__c</fullName>
    <description>Original dictated text from sales executive.</description>
    <label>Raw Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>