force-app/main/default/objects/Visit_Log__c/fields/Referral_Interest__c.field-meta.xml
<CustomField>
    <fullName>Referral_Interest__c</fullName>
    <label>Referral Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>