force-app/main/default/objects/Visit_Log__c/fields/Requested_Materials__c.field-meta.xml
<CustomField>
    <fullName>Requested_Materials__c</fullName>
    <description>Brochures, samples, or other materials requested by the physician.</description>
    <label>Requested Materials</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>