force-app/main/default/objects/Visit_Log__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required by business rules; populated by the agent flow at create time.</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Visit Logs (Sales Rep)</relationshipLabel>
    <relationshipName>Visit_Logs_As_Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>