force-app/main/default/objects/Visit_Log__c/fields/Specialties_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Specialties_Discussed__c</fullName>
    <description>Oncology specialties discussed (e.g. Head &amp; Neck Oncology).</description>
    <label>Specialties Discussed</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>