force-app/main/default/objects/Visit_Log__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <description>Comma-separated topics discussed during the visit.</description>
    <label>Topics Discussed</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>