force-app/main/default/objects/Visit_Log__c/fields/Visit_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Visit_Duration_Minutes__c</fullName>
    <label>Visit Duration (mins)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>