force-app/main/default/objects/Visit_Log__c/fields/Visit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Visit_Summary__c</fullName>
    <description>AI-generated structured summary of the visit.</description>
    <label>Visit Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>